--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ git rm -r --cached .DS_Store
 #.vscode
 .DS_Store
 **/__pycache__
-data/datainfo/*
+data/datainfo/
 data/result_log/*
 *.pyc
 data/imgs
